<resources>
    <string name="app_name">Portfolio App</string>
    <string name="amarachi_eke">Amarachi Eke</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="craft_and_idea_lover_curious_about_the_internet_dress_maker">Craft and Idea lover, curious about the internet, dress maker</string>
    <string name="play_store">Play Store</string>
    <string name="google">Google</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="pinterest">Pinterest</string>
    <string name="youtube">YouTube</string>
    <string name="dribble">Dribble</string>
    <string name="linkedin">LinkedIn</string>
    <string name="snapchat">Snapchat</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="google_plus">Google_plus</string>
    <string name="hike">Hike</string>
    <string name="apple">Apple</string>
    <string name="skype">Skype</string>
    <string name="username">Username</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="nickname">Nickname</string>
</resources>
