<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="#D1C9C9"
        android:layout_marginTop="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/face"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/amarachi_eke"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:text="@string/mobile_developer"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:text="@string/craft_and_idea_lover_curious_about_the_internet_dress_maker"
            android:textAlignment="center"
            android:textSize="15sp"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_marginTop="320dp"
        android:background="#574A4747"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/icon_1_package"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/pack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/playstore"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/google"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/website"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image6"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/facebook"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/text_1_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="58dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/play_store"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/google"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/website"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/facebook"
                        android:textSize="12sp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pack2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            tools:ignore="MissingConstraints,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image7"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/twitter"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image8"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/instagram"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image9"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/pinterest"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image10"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/youtube"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/twitter"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/instagram"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/pinterest"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/youtube"
                        android:textSize="12sp" />


                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pack3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            tools:ignore="MissingConstraints,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image11"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/dribble"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image12"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/linkedin"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image13"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/snapchat"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image14"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/whatsapp"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/dribble"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/linkedin"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/snapchat"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/whatsapp"
                        android:textSize="12sp" />

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pack4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            tools:ignore="MissingConstraints,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image15"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/skype"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image16"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/google_plus"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image17"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:src="@mipmap/hike"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image18"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@mipmap/apple"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/skype"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/google_plus"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/hike"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/apple"
                        android:textSize="12sp" />


                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>